# logistic_mapping

./: Cargo.toml  README.md  logistic_map_bif_detailed  logistic_map_values.json
src/: lib.rs  main.rs
