[package]
name = "logistic_map"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
# gnuplot = "0.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"